k8s/manifests/network-system/traefik/add-ons/dashboard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: network-system
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: ${CLUSTER_CERT}
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: network-system-rfc1918-ips@kubernetescrd
    hajimari.io/enable: "true"
    hajimari.io/icon: "web"
    hajimari.io/group: "rook-ceph"
    hajimari.io/appName: "traefik"

spec:
  tls:
    - secretName: traefik-${CLUSTER_NAME}-tls
      hosts:
        - "traefik.${CLUSTER_DOMAIN}"

  rules:
    - host: traefik.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 9000
